# eggdbus

./: Makefile  README.md
src/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  eggdbus-1.pc.in
src/docs/: Makefile.am  Makefile.in  TODO
src/docs/eggdbus/: Makefile.am  Makefile.in  eggdbus-docs.xml  eggdbus-sections.txt  eggdbus.types
src/docs/eggdbus/html/: EggDBusArraySeq.html  EggDBusBusNameTracker.html  EggDBusConnection.html  EggDBusHashMap.html  EggDBusInterfaceProxy.html  EggDBusMessage.html  EggDBusMethodInvocation.html  EggDBusObjectProxy.html  EggDBusStructure.html  EggDBusVariant.html  TestDescribedPair.html  TestDescribedPoint.html  TestExtendedDescribedPoint.html  TestPair.html  TestPoint.html  TestStructWithVariant.html  TestSubject.html  core.html  datatypes.html  eggdbus-binding-tool.1.html  eggdbus-eggdbusbus.html  eggdbus-eggdbuserror.html  eggdbus-eggdbusinterface.html  eggdbus-eggdbusintrospectable.html  eggdbus-eggdbusmisctypes.html  eggdbus-eggdbusobjectpath.html  eggdbus-eggdbuspeer.html  eggdbus-eggdbusproperties.html  eggdbus-eggdbussignature.html  eggdbus-enummain-CreateFlags.html  eggdbus-enummain-DeleteFlags.html  eggdbus-enummain-DetailedError.html  eggdbus-enummain-Error.html  eggdbus-enummain-OtherFlags.html  eggdbus-enummain-Vehicle.html  eggdbus-hierarchy.html  eggdbus-interface-com.example.Frob.html  eggdbus-interface-com.example.Tweak.html  eggdbus-interface-com.example.Twiddle.html  eggdbus-interface-org.freedesktop.DBus.Introspectable.html  (+35 more)
src/docs/man/: Makefile.am  Makefile.in  eggdbus-binding-tool.xml
src/docs/tests/: Makefile.am  Makefile.in  tests-sections.txt  tests.types
src/docs/tests/html/: index.html  tests.devhelp  tests.devhelp2
src/src/: Makefile.am  Makefile.in
src/src/eggdbus/: Makefile.am  Makefile.in  completetype.c  completetype.h  completetypetest.c  docbook-interface-org.freedesktop.DBus.Introspectable.xml  docbook-interface-org.freedesktop.DBus.Peer.xml  docbook-interface-org.freedesktop.DBus.Properties.xml  docbook-interface-org.freedesktop.DBus.xml  docbook.c  docbook.h  eggdbus-glib-genmarshal.c  eggdbusarrayseq.c  eggdbusbindingtool.c  eggdbusbindingtool.h  eggdbusbusnametracker.c  eggdbusconnection.c  eggdbusenumtypes.c.template  eggdbusenumtypes.h.template  eggdbuserror.c  eggdbushashmap.c  eggdbusinterface.c  eggdbusinterfaceproxy.c  eggdbusintrospector.c  eggdbusmessage.c  eggdbusmethodinvocation.c  eggdbusmisctypes.c  eggdbusobjectpath.c  eggdbusobjectproxy.c  eggdbusprivate.h  eggdbussignature.c  eggdbusstructure.c  eggdbustypes.c  eggdbusutils.c  eggdbusvariant.c  enum.c  enum.h  interface.c  interface.h  org.freedesktop.DBus.Introspectable.xml  (+5 more)
src/src/tests/: Makefile.am  Makefile.in  com.example.Frob.xml  com.example.Tweak.xml  com.example.Twiddle.xml  docbook-enum-CreateFlags.xml  docbook-enum-DeleteFlags.xml  docbook-enum-DetailedError.xml  docbook-enum-Error.xml  docbook-enum-OtherFlags.xml  docbook-enum-Vehicle.xml  docbook-interface-com.example.Frob.xml  docbook-interface-com.example.Tweak.xml  docbook-interface-com.example.Twiddle.xml  docbook-struct-DescribedPair.xml  docbook-struct-DescribedPoint.xml  docbook-struct-ExtendedDescribedPoint.xml  docbook-struct-Pair.xml  docbook-struct-Point.xml  docbook-struct-StructWithVariant.xml  testclient.c  testfrobimpl.c  testfrobimpl.h  testserver.c  testsubject.c  testsubject.h  testtweakimpl.c  testtweakimpl.h  testtwiddleimpl.c  testtwiddleimpl.h  testtypes.h
